style/adv.css
:root {
  --primary-bg-color:#000000;
  --primary-color: #ffffff; 
  --secondary-color: #747474;
  --accent-color: #aa0000; 
  --heading-font: "Staatliches", sans-serif;
}

hr{
    border: 2px solid var(--accent-color);
    max-width: 1200px;
    z-index: 2;
}

.secondary-page{
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    background-color: var(--primary-bg-color);
}

.sub-header{
  background-image: linear-gradient(to bottom, rgba(255,255,255,0.6), 50%, #0000);
  position: fixed;
  width: 100%;
  z-index: 999;
  height: 150px;
  opacity: 0;
  animation: header 1s forwards;
  animation-delay: 0.5s;
  transform: translateY(-30px);
}


@keyframes header {
  to{opacity:1; transform: translateY(0);}
}

.page-header{
    display: flex;
    width: 100%;
    min-height: 100vh;
    align-items: center;
    justify-content: center;
    z-index: 1;
}

.page-header h1{
    font-family: var(--heading-font);
    font-weight: 400;
    font-style: normal;
    font-size: 15vw;
    color: var(--primary-color);
}

.team-wrapper{
    min-height: 100vh;
    scroll-snap-align: start;
    margin-bottom: 100px;
}

.main-team{
    max-width: 1100px;
    flex-wrap: wrap;
    display: flex;
    align-items: center;
    gap: 40px;
    margin: 50px auto;
}

.main-team-wrapper{
    max-width: 1100px;
    flex-wrap: wrap;
    display: flex;
    align-items: center;
    gap: 40px;
    margin: 50px auto;
}

.main-team-wrapper.reverse{
    flex-direction: row-reverse;
}


.team-desc{
    flex: 1;
}
.team-desc h1{
    color: var(--accent-color);
}.team-desc h2{
    color: var(--primary-color);
    margin: 10px 0;
}
.team-desc p{
    color: var(--primary-color);
    font-size: 16px;
    line-height: 1.6;
}
.main-team-wrapper img{
    width: 300px;
    height: auto;
    display: block;
    border-radius: 50px 0 50px 0;
}

.employees{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 40px;
    max-width: 1100px;
    margin: 50px auto;
    padding: 20px;
    margin: 50px 0;
}

.employee{
    display: block;
    text-align: center;
}
.employee img{
    border-radius: 50px 0 50px 0;
    width: 200px;
    margin-bottom: 20px;
}
.employee h2{
    font-size: 1.5rem;
    color: var(--accent-color);
}
.employee h3{
    font-size: 1rem;
    color: var(--primary-color);
    margin-top: 10px;
}


/* Mobile Responsive */

@media (max-width: 768px) {
  .main-team-wrapper,
  .main-team-wrapper.reverse {
    flex-direction: column;
    text-align: center;
    padding: 20px;
  }

  .main-team-wrapper img{
    width: 200px;
  }

  .team-desc h1{
    font-size: 1.5rem;
  }
  .team-desc h2{
    font-size: 1.2rem;
  }
  .team-desc p{
    font-size: .8rem;
  }

  .employees{
    grid-template-columns: repeat(2, 1fr); /* 2 columns */
    gap: 20px;
  }

  .employee img{
    width: 150px;
  }

  .employee h2{
    font-size: 1rem;
  }
  .employee h3{
    font-size: 0.8rem;
  }
}


.team-header{
    background: url(../img/team/team-bg.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-attachment: fixed;
}

.team-header::before{
    content: '';
    position: absolute;
    background-color: #000000;
    width: 100%;
    height: 100%;
    z-index: -1;
    opacity: 0.7;
}

.team-header::after{
    content: '';
    position: absolute;
    width: 100%;
    height: 100px;
    left: 0;
    bottom: 0;
    background: linear-gradient(to top, rgba(0,0,0,0.9) 10%, #0000);
}


.adv-wrapper,
.event-wrapper,
.public-wrapper,
.branded-wrapper,
.political-wrapper{
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    scroll-snap-align: start;
    max-width: 1100px;
    
}

.adv-intro,
.event-intro,
.public-intro,
.branded-intro,
.political-intro{
    text-align: center;
    margin-bottom: 100px;
    margin-top: 100px;
    color: var(--primary-color);
    line-height: 1.5; 
    width: 100%;
}

.adv-ask,
.event-ask,
.public-ask,
.branded-ask,
.political-ask{
    color: var(--secondary-color);
    font-size: 25px;
    font-weight: 300;
    margin-bottom: 200px;
    text-align: center;
    width: 100%;
}

.adv-ask a{
    transition: 0.5s ease;
}

.adv-ask:hover a,
.event-ask:hover a,
.public-ask:hover a,
.branded-ask:hover a,
.political-ask:hover a{
    color: var(--accent-color);
}

.adv-images,
.event-images,
.public-images,
.branded-images,
.political-images{
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
    grid-auto-rows: 300px;
    gap: 10px;
    scroll-snap-align: start;
    margin-bottom: 100px;
}

.adv-item,
.event-item,
.branded-item,
.political-item{
  overflow: hidden;
  border-radius: 12px;
}

.adv-images img,
.event-images img,
.branded-images img,
.political-images img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
    border-radius: 15px;
    scale: 1;
    transition: 0.5s ease-in
}

.adv-images img:hover,
.event-images img:hover,
.branded-images img:hover,
.political-images img:hover{
    scale: 1.1;
}












.tall{
    grid-row: span 2;
}
.big{
    grid-column: span 2;
    grid-row: span 2;
}
.wide{
    grid-column: span 2;
}


@media (max-width: 768px) {
    .adv-wrapper,
    .event-wrapper,
    .public-wrapper,
    .branded-wrapper,
    .political-wrapper{
        padding: 20px;
    }

    .adv-intro,
    .event-intro,
    .public-intro,
    .branded-intro,
    .political-intro{
        font-size: 1.5rem;
    }

    .adv-ask,
    .event-ask,
    .public-ask,
    .branded-ask,
    .political-ask{
        font-size: 18px;
    }
    .wide,
    .big {
        grid-column: span 1;
    }
}



/* FORM */

.contact-wrapper{
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;
    margin: auto;
    width: 100%;
    min-height: 100vh;
    max-width: 1100px;
    scroll-snap-align: start;
}

.form-contact p i{
    width: 50px;
    color: #ffffff;
}

.form-container{
  max-width: 500px;
  height: auto;
  padding: 20px;
  background-color: var(--primary-bg-color);
  color: var(--primary-color);
}

.form-contact h1{
    margin-bottom: 50px;
    font-family: var(--heading-font);
    font-size: 3em;
    color: var(--accent-color);
}

.form-contact p{
    display: flex;
    font-size: 20px; 
    margin-bottom: 20px; 
    color: var(--primary-color);  
    transition: 0.3s ease;
}

.form-contact p .icon{
    display: flex;
    align-items: center;
    font-size: 30px;
    margin-right: 20px;
}

.form-contact p a{
    transition: 0.3s ease;
}

.form-contact p:hover a{
    color: var(--accent-color)
}

.form-contact .form-socials{
    display: flex;
    justify-content: space-between;
}
.form-contact .form-socials img{
    width: 50px;
}

.our-socials{
    margin-top: 50px;
    margin-bottom: 0;
}

input[type=text], input[type=email], textarea {
  width: 100%;
  padding: 12px;
  border: none;
  outline: none;
  box-sizing: border-box;
  margin-top: 2px;
  margin-bottom: 20px;
  resize: vertical;
  background-color: var(--primary-bg-color);
  border-bottom: 1px solid var(--primary-color);
  color: #ffffff;
}

button{
    color: var(--primary-color);
    border-radius: 10px;
    padding: 15px;
    margin-top: 30px;
    width: 200px;
    border: none;
    background-color: var(--accent-color);
}

@media (max-width: 768px){
    .form-container{
        padding: 50px;
        margin-bottom: 100px;
    }

    .form-contact {
        margin: 100px auto;
    }
}



/* ADVERTISING */

.ad-header{
    position: relative;
    background: url('../img/advertising/ad-bg.png');
    background-repeat: no-repeat;
    background-size: cover;
    z-index: 1;
}

.ad-header h1{
    z-index: 2;
}

.ad-header::before{
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.7);
}

.ad-header::after{
    content: '';
    position: absolute;
    width: 100%;
    height: 200px;
    left: 0;
    bottom: 0;
    background: linear-gradient(to top, rgba(0,0,0,0.9) 20%, #0000);
}

.ads-holder{
    display: flex;
    flex-direction: column;
    margin: 50px auto 100px;
    overflow: hidden;
    scroll-snap-align: start;
}

.ad-title,
.pol-title{
    font-size: 2em;
    font-family: var(--heading-font);
    color: var(--accent-color);
    margin: 100px 0 30px 0;
}

.image-thumb{
    max-width: 1200px;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 20px;
}

@media (max-width: 768px){
    .image-thumb{
        grid-template-columns: repeat(2, 1fr);
        margin: auto;
    }
}

.image-grid{
    position: relative;
    max-width: 300px;
    gap: 20px;
    overflow: hidden;
    border-radius: 10px;
    z-index: 3;
    cursor: pointer;
}

.image-grid::before{
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 50px;
    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8), 50%, #0000);
    z-index: 1;
}

.image-grid img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
    scale: 1;
    transition: 0.5s ease;
}

.image-grid img:hover{
    scale: 1.2;
}

.image-grid .description{
    position:absolute;
    bottom: 0;
    left: 0;
    font-size: 2em;
    font-family: var(--heading-font);
    color: var(--primary-color);
    margin: 0 0 5px 10px;
    z-index: 2;
    line-height: 1;
}



/* POLITICAL */

.political-holder{
    max-width: 1200px;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-wrap: wrap;
    padding: 20px;
    color: var(--primary-color);
    scroll-snap-align: start;
    z-index: 1;
}

.political-holder iframe{
    max-width: 800px;
    width: 100%;
    height: 500px;
    border: 1px solid var(--accent-color);
    border-radius: 20px;
    margin: 20px auto 20px;
}

.political-holder .pol-ad-title{
    font-family: var(--heading-font);
    margin: 20px 0;
    font-size: 1.5rem;
}

.political-holder p{
    font-size: 18px;
}

.political-holder .image-thumb{
    margin-bottom: 80px;
}

.political-holder .image-thumb .image-grid{
    cursor: auto;
}


.sub-services{
    position: relative;
    display: flex;
    margin: 50px 0 200px 0;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    max-width: 1200px;
    height: auto;
    flex-wrap: wrap;
}

.sub-services-title h1{
    font-family: var(--heading-font);
    color: var(--accent-color);
    margin-top: 150px;
}

.sub-services h1{
    font-size: 2rem;
    align-items: center;
    color: var(--primary-color);
    cursor: pointer;
}

.sub-services h1 a{
    transition: 0.3s ease;
}

.sub-services h1:hover a{
    color: var(--accent-color);
}

@media (max-width: 768px){
    .sub-services{
        padding: 50px;
        justify-content: space-around;
    }
    .sub-services h1{
        margin:20px;
    }

    .political-holder iframe{
        height: 200px;
    }
}

